--- a/loft-taxi/src/components/css/style.css
+++ b/loft-taxi/src/components/css/style.css
@@ -257,3 +257,176 @@ input#standard-required  {
     width: 1920px;
     height: 1080px;
 } */
+
+.taxi_box {
+    position: absolute;
+    top: 25px;
+    left: 20px;
+    max-width: 30%;
+    border-radius: 4px;
+    background: #fff;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+}
+.taxi_pad {
+    padding: 44px 60px;
+}
+.start_taxi {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+    padding-bottom: 16px;
+}
+.MuiGrid-grid-xs-12 {
+    flex-grow: 0;
+    max-width: 100%;
+    flex-basis: 100%;
+}
+.MuiGrid-item {
+    margin: 0;
+    box-sizing: border-box;
+}
+.jss405 {
+    margin-bottom: 30px !important;
+}
+.MuiTypography-alignLeft {
+    text-align: left;
+}
+.MuiTypography-h4 {
+    font-size: 2.125rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: 0.00735em;
+}
+.MuiTypography-root {
+    margin: 0;
+}
+.jss406 {
+    margin-bottom: 22px !important;
+}
+.MuiTypography-body1 {
+    font-size: 1rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+}
+.button_taxi {
+    width: 100%;
+    padding: 6px 16px;
+    font-size: 0.875rem;
+    min-width: 64px;
+    box-sizing: border-box;
+    color: rgba(0, 0, 0, 0.87);
+    box-shadow: none;
+    background-color: #ffc617;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+    line-height: 1.75;
+    border-radius: 4px;
+    letter-spacing: 0.02857em;
+    text-transform: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button_taxi:hover {
+    background: #d0a215;
+}
+.search_adress {
+    height: 36px;
+    display: flex;
+    padding: 0;
+    width: 100%;
+    border-bottom: 1px solid #999;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.search_adress_input{
+    border: none;
+    width: 89%;
+    outline:none;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 18px;
+    padding-right: 8px;
+    cursor: pointer;
+}
+.text_span_tax {
+    left: 2px;
+    bottom: 6px;
+    position: absolute;
+    font-size: 16px;
+}
+.bottom_arrow {
+    background: url(../img/down-arrow.svg) no-repeat;
+    width: 14px;
+    height: 14px;
+}
+.box_for_button {
+    width: 9%;
+    height: 56%;
+    border-left: 1px solid #999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.otsp_40px {
+    width: 100%;
+    height: 40px;
+}
+.box_btn_taxxxi {
+    margin-top: 8%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 30%;
+}
+.btn_taxi_yellow {
+    background-color: #ffc617;
+    cursor: pointer;
+}
+.btn_taxi_grey {
+    background-color: #929292;
+}
+.slk_ll {
+    height: 73% !important;
+}
+.drop_down_spisok {
+    position: absolute;
+    width: 79%;
+    max-height: 31%;
+    overflow: auto;
+    background: #fff;
+    box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    top: 85px;
+}
+.drop_down_spisok ul{
+    margin-left: 0;
+    padding-left: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+.drop_down_spisok ul li {
+    list-style-type: none;
+    cursor: pointer;
+}
+.drop_down_spisok ul li:hover {
+    background: #e5e5e591;
+}
+.style_spisok_2 {   
+    top: 57%;
+}
+.btn_taxi_yellow:hover {
+    background: #d0a215;
+}
+.del_value {
+    background: url(../img/close.svg) no-repeat;
+    width: 10px;
+    height: 10px;
+    margin-right: 11px;
+    cursor: pointer;
+}
